Start of Skyplot and NMEA Sentences

--- a/app/src/main/res/layout/fragment_footer_buttons_inclusion_prism4d.xml
+++ b/app/src/main/res/layout/fragment_footer_buttons_inclusion_prism4d.xml
@@ -1,8 +1,7 @@
 
 
 
-    <!-- The Footer will be as standard as possible -->
-    <!-- Three top level footer areas: Esc/info table/Enter -->
+    <!-- Truncated Footer: Esc/Enter Buttons only -->
     <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -10,7 +9,8 @@
 
         android:layout_gravity="bottom"
         android:orientation="horizontal"
-  >
+        >
+
         <!-- Buttons Only -->
         <Button
             style="?android:attr/buttonBarButtonStyle"
@@ -23,6 +23,9 @@
 
             android:gravity="center"
             android:layout_gravity="start|bottom"
+
+            android:paddingStart="@dimen/button_start_margin"
+            android:paddingEnd="@dimen/button_interum_margin"
 
             android:background="@color/colorGrayest"
             android:textColor="@color/colorGray"
@@ -37,8 +40,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+
             android:gravity="center"
             android:layout_gravity="end|bottom"
+
+            android:paddingStart="@dimen/button_interum_margin"
+            android:paddingEnd="@dimen/button_end_margin"
 
             android:background="@color/colorGrayest"
             android:textColor="@color/colorGray"
