--- a/app/src/main/res/layout/fragment_project_1_6_maintain_point_prism4d.xml
+++ b/app/src/main/res/layout/fragment_project_1_6_maintain_point_prism4d.xml
@@ -381,6 +381,8 @@
 
     </ScrollView>
 
+    <!-- The Footer will be as standard as possible -->
+    <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/>
 
 </LinearLayout>
 
