--- a/app/src/main/res/layout/fragment_project_list_prism4d.xml
+++ b/app/src/main/res/layout/fragment_project_list_prism4d.xml
@@ -1,24 +1,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.asc.msigeosystems.prism4dmockup.MainPrism4DActivity"
+    tools:context=".MainPrism4DActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorScreenBackground"
     android:orientation="vertical"
     >
-    <!-- Title line for the list of projects -->
-    <LinearLayout
+    <!-- Title Line -->
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <LinearLayout
+
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+
+        android:focusable="false"
+        android:clickable="false"
+
+        android:paddingTop="@dimen/interum_vertical"
+
+        android:background="@color/colorScreenBackground"
         >
+
         <!-- ID -->
         <TextView
-            android:text="@string/project_id_label"
+            android:text="@string/project_row_id_label"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="3"
 
             android:layout_marginEnd="8dp"
 
@@ -28,7 +41,7 @@
 
         <!-- Name -->
         <TextView
-            android:text="@string/project_name_label"
+            android:text="@string/project_row_name_label"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -42,7 +55,7 @@
 
         <!-- Date last maintained -->
         <TextView
-            android:text="@string/project_last_modified_date_label"
+            android:text="@string/project_row_last_modified_date_label"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -60,37 +73,44 @@
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="3"
 
             android:layout_marginEnd="8dp"
 
             android:textColor="@color/colorTextBlack"
             android:background="@color/colorScreenBackground"
             />
-    </LinearLayout>
 
-    <!-- Recycler view containing the list of projects -->
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    </LinearLayout>
+    </HorizontalScrollView>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_height="match_parent"
+
+        android:fillViewport="true"
 
         >
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/projectsList"
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-
+            android:layout_height="match_parent"
             >
+            <!-- Recycler view containing the list of projects -->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/projectsList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
 
-        </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.RecyclerView>
 
-
+        </HorizontalScrollView>
 
     </ScrollView>
 
     <!-- No Footer on the Projects list page -->
+    <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/>
+
 </LinearLayout>
 
