--- a/app/src/main/res/layout/fragment_point_list_prism4d.xml
+++ b/app/src/main/res/layout/fragment_point_list_prism4d.xml
@@ -8,19 +8,32 @@
     >
 
     <!-- Title line for the list of points -->
-    <LinearLayout
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+
+        android:focusable="false"
+        android:clickable="false"
+
+        android:paddingTop="@dimen/interum_vertical"
+
+        android:background="@color/colorScreenBackground"
         >
+
         <!-- Project ID -->
         <TextView
             android:text="@string/point_row_project_id_label"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="2"
-
+            android:layout_weight="5"
             android:layout_marginEnd="8dp"
 
             android:textColor="@color/colorTextBlack"
@@ -33,8 +46,7 @@
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="2"
-
+            android:layout_weight="6"
             android:layout_marginEnd="8dp"
 
             android:textColor="@color/colorTextBlack"
@@ -47,8 +59,7 @@
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="5"
-
+            android:layout_weight="10"
             android:layout_marginEnd="8dp"
 
             android:textColor="@color/colorTextBlack"
@@ -61,8 +72,7 @@
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="5"
-
+            android:layout_weight="10"
             android:layout_marginEnd="8dp"
 
             android:textColor="@color/colorTextBlack"
@@ -75,52 +85,54 @@
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="5"
-
+            android:layout_weight="10"
             android:layout_marginEnd="8dp"
 
             android:textColor="@color/colorTextBlack"
             android:background="@color/colorScreenBackground"
             />
 
-        <!-- Descr -->
+        <!-- Description -->
         <TextView
             android:text="@string/point_row_description_label"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="8"
-
-            android:layout_marginEnd="8dp"
+            android:layout_weight="15"
+            android:layout_marginEnd="16dp"
 
             android:textColor="@color/colorTextBlack"
             android:background="@color/colorScreenBackground"
             />
 
     </LinearLayout>
+    </HorizontalScrollView>
 
-    <!-- Recycler View of the points -->
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_height="match_parent"
 
+        android:fillViewport="true"
         >
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/pointsList"
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             >
 
-        </android.support.v7.widget.RecyclerView>
+            <!-- Recycler View of the points -->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/pointsList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
 
+            </android.support.v7.widget.RecyclerView>
 
+        </HorizontalScrollView>
 
     </ScrollView>
-
-
-    <!-- The Footer will be just the buttons -->
+    <!-- The Footer will be as standard as possible -->
     <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/>
 
 
