--- a/app/src/main/res/layout/fragment_nmea_list_prism4d.xml
+++ b/app/src/main/res/layout/fragment_nmea_list_prism4d.xml
@@ -7,66 +7,71 @@
     android:orientation="vertical"
     >
 
-    <!-- Title line for the list of NMEA Sentences -->
+    <!-- Everything on the screen has to scroll horizontally -->
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-
-        <LinearLayout
-
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:focusable="false"
-        android:clickable="false"
-
-        android:paddingTop="@dimen/interum_vertical"
-
-        android:background="@color/colorScreenBackground"
-        >
-
-        <!-- NMEA Sentence -->
-        <TextView
-            android:text="@string/skyplot_nmea_list_title"
-
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="5"
-            android:layout_marginEnd="8dp"
-
-            android:textColor="@color/colorTextBlack"
-            android:background="@color/colorScreenBackground"
-            />
-
-    </LinearLayout>
-    </HorizontalScrollView>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
         android:fillViewport="true"
         >
-
-        <HorizontalScrollView
+        <!-- rest of the screen -->
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
 
-            <!-- Recycler View of the points -->
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/nmeaList"
+            <LinearLayout
+
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
+                android:focusable="false"
+                android:clickable="false"
+
+                android:paddingTop="@dimen/interum_vertical"
+
+                android:background="@color/colorScreenBackground"
                 >
 
-            </android.support.v7.widget.RecyclerView>
+                <!-- NMEA Sentence title line -->
+                <TextView
+                    android:text="@string/skyplot_nmea_list_title"
 
-        </HorizontalScrollView>
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="5"
+                    android:layout_marginEnd="8dp"
 
-    </ScrollView>
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+            </LinearLayout>
+
+
+            <!-- recycler view of the nmea sentences -->
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true"
+                >
+
+                <!-- Recycler View containing the list of nmea sentences -->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/nmeaList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                </android.support.v7.widget.RecyclerView>
+
+            </ScrollView>
+
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
 
     <!-- The Footer will be as standard as possible -->
     <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/>
