--- a/app/src/main/res/layout/fragment_point_list_prism4d.xml
+++ b/app/src/main/res/layout/fragment_point_list_prism4d.xml
@@ -7,134 +7,138 @@
     android:orientation="vertical"
     >
 
-    <!-- Title line for the list of points -->
+    <!-- Everything on the screen has to scroll horizontally -->
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-
-        <LinearLayout
-
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:focusable="false"
-        android:clickable="false"
-
-        android:paddingTop="@dimen/interum_vertical"
-
-        android:background="@color/colorScreenBackground"
-        >
-
-        <!-- Project ID -->
-        <TextView
-            android:text="@string/point_row_project_id_label"
-
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="5"
-            android:layout_marginEnd="8dp"
-
-            android:textColor="@color/colorTextBlack"
-            android:background="@color/colorScreenBackground"
-            />
-
-        <!-- Point ID -->
-        <TextView
-            android:text="@string/point_row_point_id_label"
-
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="6"
-            android:layout_marginEnd="8dp"
-
-            android:textColor="@color/colorTextBlack"
-            android:background="@color/colorScreenBackground"
-            />
-
-        <!-- Easting -->
-        <TextView
-            android:text="@string/point_row_easting_label"
-
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="10"
-            android:layout_marginEnd="8dp"
-
-            android:textColor="@color/colorTextBlack"
-            android:background="@color/colorScreenBackground"
-            />
-
-        <!-- Northing -->
-        <TextView
-            android:text="@string/point_row_northing_label"
-
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="10"
-            android:layout_marginEnd="8dp"
-
-            android:textColor="@color/colorTextBlack"
-            android:background="@color/colorScreenBackground"
-            />
-
-        <!-- Elevation -->
-        <TextView
-            android:text="@string/point_row_elevation_label"
-
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="10"
-            android:layout_marginEnd="8dp"
-
-            android:textColor="@color/colorTextBlack"
-            android:background="@color/colorScreenBackground"
-            />
-
-        <!-- Description -->
-        <TextView
-            android:text="@string/point_row_description_label"
-
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="15"
-            android:layout_marginEnd="16dp"
-
-            android:textColor="@color/colorTextBlack"
-            android:background="@color/colorScreenBackground"
-            />
-
-    </LinearLayout>
-    </HorizontalScrollView>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
         android:fillViewport="true"
         >
 
-        <HorizontalScrollView
+        <!-- rest of the screen -->
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
+            <!--title line for point list -->
+            <LinearLayout
 
-            <!-- Recycler View of the points -->
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/pointsList"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
+                android:focusable="false"
+                android:clickable="false"
+
+                android:paddingTop="@dimen/interum_vertical"
+
+                android:background="@color/colorScreenBackground"
                 >
 
-            </android.support.v7.widget.RecyclerView>
+                <!-- Project ID 5-->
+                <TextView
+                    android:text="@string/point_row_project_id_label"
 
-        </HorizontalScrollView>
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="5"
+                    android:layout_marginEnd="8dp"
 
-    </ScrollView>
-    <!-- The Footer will be as standard as possible -->
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Point ID 6-->
+                <TextView
+                    android:text="@string/point_row_point_id_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="6"
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Easting 10-->
+                <TextView
+                    android:text="@string/point_row_easting_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="10"
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Northing 10-->
+                <TextView
+                    android:text="@string/point_row_northing_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="10"
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Elevation 10-->
+                <TextView
+                    android:text="@string/point_row_elevation_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="10"
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Description 15-->
+                <TextView
+                    android:text="@string/point_row_description_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="15"
+                    android:layout_marginEnd="16dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+            </LinearLayout>
+
+            <!--recycler view for the list of projects-->
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true"
+                >
+
+                <!-- Recycler View of the points -->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/pointsList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                </android.support.v7.widget.RecyclerView>
+
+            </ScrollView>
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
+
+     <!-- Only buttons in the Footer  -->
     <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/>
-
 
 </LinearLayout>
 
