--- a/app/src/main/res/layout/data_nmea_list_row.xml
+++ b/app/src/main/res/layout/data_nmea_list_row.xml
@@ -21,7 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="5"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
 
         android:textColor="@color/colorTextBlack"
         android:background="@color/colorWhite"
