--- a/app/src/main/res/layout/fragment_coord_conversion_prism4d.xml
+++ b/app/src/main/res/layout/fragment_coord_conversion_prism4d.xml
@@ -655,7 +655,7 @@
     </ScrollView>
 
     <!-- The Footer will be as standard as possible -->
-    <include layout="@layout/fragment_footer_inclusion_prism4d"/>
+    <!--  <include layout="@layout/fragment_footer_inclusion_prism4d"/>  -->
 
 
 </LinearLayout>
