--- a/app/src/main/res/layout/fragment_project_settings_prism4d.xml
+++ b/app/src/main/res/layout/fragment_project_settings_prism4d.xml
@@ -766,7 +766,7 @@
     </ScrollView>
 
     <!-- The Footer will be as standard as possible -->
-    <include layout="@layout/fragment_footer_inclusion_prism4d"/>
+    <!-- <include layout="@layout/fragment_footer_inclusion_prism4d"/> -->
 
 
 </LinearLayout>
